Bug 777529 - Don't spellcheck Unicode numbers; r=ehsan